--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Untethered hacktivation for iOS 15+
+
+Credits:
+@checkra1n (https://checkra.in/1337)
+@tihmstar (https://github.com/tihmstar/jbinit)
+@palera1n (https://github.com/palera1n/jbinit_old_old)
+@hanakim3945 (https://github.com/hanakim3945/gestalt_hax)
